# mom-lang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  claude.md
compiler/: bootstrap.sh  runtime.c  runtime.h  self_host_test.sh
docs/: PHASES.md  bootstrap.md  build_system.md  compiler.md  concurrency.md  design.md  grammar.ebnf  interop.md  memory.md  philosophy.md  plan.md  risks.md  roadmap.md  stdlib.md  tooling.md  types.md
examples/: actor.mom  actor_sketch.mom  actor_via_channels.mom  async_sketch.mom  borrow.mom  cancel.mom  channels.mom  ffi_c_sketch.mom  fib.mom  generics.mom  hello.mom  lists.mom  match.mom  memory.mom  modules.mom  option_result.mom  pipeline.mom  state.mom  structs.mom  supervisor_sketch.mom  traits.mom  web_server_sketch.mom
rfcs/: 0000-template.md  0001-stage-2-native-codegen-widening.md  0002-dwarf-and-real-breakpoints.md  0003-tier-2-platforms.md  0004-production-user-outreach.md  README.md
runtime/: runtime.c  runtime.h
scripts/: install.ps1  install.sh
src/: ast.rs  bench.rs  borrow.rs  build.rs  codegen.rs  dbg.rs  diagnostic.rs  doc.rs  fmt.rs  fmt_ast.rs  hir.rs  interpreter.rs  lexer.rs  lib.rs  lint.rs  lsp.rs  main.rs  manifest.rs  mir.rs  parser.rs  pkg.rs  prof.rs  scaffold.rs  test_runner.rs  token.rs  typechecker.rs
std/: actor.mom  alloc.mom  async.mom  core.mom  crypto.mom  fmt.mom  io.mom  log.mom  math.mom  net.mom  os.mom  serde.mom  sync.mom  test.mom
tests/: concurrency.rs  language.rs  memory.rs  native_build.rs  stdlib.rs  (+2 more)
(+55 files in other folders)
